--- a/templates/gnarpy.html
+++ b/templates/gnarpy.html
@@ -6,11 +6,11 @@
     </title>
     <script>
         function Gnarpy() {
-            var MyName = '<img src="Gnarpy.gif" alt="Aftonsparv" width="400" height="400">'
+            var MyName = '<img src="static/Gnarpy.gif" alt="Aftonsparv" width="400" height="400">'
             document.getElementById('Gnarpy').innerHTML = MyName;
         }
         function gnarpy() {
-            var MyName = '<img src="gnarpy.jpg" alt="Aftonsparv" width="400" height="400">'
+            var MyName = '<img src="static/gnarpy.jpg" alt="Aftonsparv" width="400" height="400">'
             document.getElementById('gnarpy').innerHTML = MyName;
         }
     </script>
