--- a/templates/base.html
+++ b/templates/base.html
@@ -1,47 +1,118 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <title>
-            {% block title %} {% endblock %}
-        </title>
-        <style>
-            header {
-                background-color: rgb(28, 240, 46);
-                top: 0;
-                left: 0;
-                position: fixed;
-                height: 80px;
-                padding: 10px;
-                width: 100%;
-                float: left;
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                border-bottom: 5px rgba(255, 255, 255, 0.5);
-            }
-            main {
-                margin-top: 110px;
-            }
-            body{
-                background-color: rgb(35, 224, 76);
-            }
-        </style>
-        <header>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-            <div style="width: 5px; height: 70px; border: 10px solid rgb(28, 240, 46); background-color:rgb(35, 224, 76); color:antiquewhite"></div>
-            <a href="/" style="text-decoration:none"> Home Page </a>
-            <div style="width: 5px; height: 70px; border: 10px solid rgb(28, 240, 46); background-color:rgb(35, 224, 76); color:antiquewhite"></div>
-            <a href="/about"> About Page </a>
-            <div style="width: 5px; height: 70px; border: 10px solid rgb(28, 240, 46); background-color:rgb(35, 224, 76); color:antiquewhite"></div>
-            <a href="/contact"> Contact Page </a>
-            <div style="width: 5px; height: 70px; border: 10px solid rgb(28, 240, 46); background-color:rgb(35, 224, 76); color:antiquewhite"></div>
-            <a href="/login"> Login Page </a>
-            <div style="width: 5px; height: 70px; border: 10px solid rgb(28, 240, 46); background-color:rgb(35, 224, 76); color:antiquewhite"></div>
-            <a href="/register"> Register Page </a>
-            <div style="width: 5px; height: 70px; border: 10px solid rgb(28, 240, 46); background-color:rgb(35, 224, 76); color:antiquewhite"></div>
-            <a href="/terms"> Terms Page </a>
-        </header>
-        <main>
-            {% block content %} {% endblock %}
-        </main>
-    </body>    
+
+<head>
+    <link rel="shortcut icon" type="image/x-icon" href="static/Gnarpy.gif">
+    <title>{% block title %}{% endblock %}</title>
+
+    <!-- Import Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <!-- CSS used for navbar -->
+    <style>
+        header {
+            position: fixed;
+            left: 0;
+            top: 0;
+            height: 100px;
+            padding: 10px;
+            width: 100%;
+            float: left;
+            background-color: aquamarine;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            border-bottom: 5px rgba(255, 255, 255, 0.5) solid;
+        }
+
+        main {
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+    </style>
+
+</head>
+
+<body>
+    <!-- <header>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+            <a href="/">Home Page </a>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+            <a href="/gnarp">Gnarp Gnarp</a>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+            <a href="/gregory">Gregory</a>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+            <a href="/about">About Us</a>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+            <a href="/contact">Contact Us</a>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+            <a href="/afton">View Aftons</a>
+            <div style="width: 5px; height: 70%; border: 10px solid aquamarine; background-color: gray; color: gray;"></div>
+        </header> -->
+    <nav class="navbar sticky-top navbar-expand-lg" style="background-color: aquamarine;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/static/Gnarpy.gif" alt="Gnarp Catalog" width="45" height="45">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/aftonsparv">View Aftons</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Other Things
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/terms">Terms</a></li>
+                            <li><a class="dropdown-item" href="/">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="/about">About Us</a></li>
+                            <li><a class="dropdown-item" href="/contact">Contact Us</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="d-flex align-items-center">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if name %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user">{{ name }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+</body>
+
+<main>
+    {% block content %}{% endblock %}
+</main>
+
 </html>
