--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -180,6 +181,7 @@
             class="alert alert-dismissible fade show 
                {% if category == 'danger' %} alert-danger 
                {% elif category == 'success' %} alert-success 
+               {% elif category == 'warning' %} alert-warning
                {% else %} alert-info {% endif %}"
             style="position: fixed; top: 80px; right: 20px; width: 250px; z-index: 1050; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);">
             {{ msg }}
