--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+<!-- register.html -->
 {% extends "base.html" %}
 {% block title %}Register{% endblock %}
 
@@ -44,6 +45,7 @@
         </div>
         <button type="submit" class="btn btn-primary"
             style="background-color: #1f25a5; border-width: 0px;">Register</button>
+        <br><a href="/login" style="font-size:medium;"">Already got an account? Login here</a>
     </form>
 </div>
 {% if form.errors %}
