--- a/templates/base.html
+++ b/templates/base.html
@@ -61,10 +61,11 @@
 
         main {
             padding: 20px;
+            min-height: 90vh;
         }
 
         footer {
-            position: absolute;
+            position: relative;
             bottom: 0;
             background-color: #1f25a5;
             /* Dark blue for footer */
