--- a/templates/editing.html
+++ b/templates/editing.html
@@ -1,35 +1,33 @@
 <!-- Sinner Card!!! -->
 <div class="col-md-4">
     <div class="card text-center">
-        <img src="/static/Faust.png" class="card-img-top" alt="Trainer 3">
+        <img src="/static/Sinclair.png" class="card-img-top" alt="Trainer 3">
         <div class="card-body">
             <h5 class="card-title">
-                Faust
+                Sinclair
             </h5>
-            <p class="card-text">Es irrt der Mensch, solang er strebt.<br>Man errs, as long as he strives.</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#FaustModal">
+            <p class="card-text">If you please, call me Ishmael.</p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#SinclairModal">
                 Read more
             </button>
             <!-- Modal -->
-            <div class="modal fade" id="FaustModal" tabindex="-1" aria-labelledby="FaustModal"
+            <div class="modal fade" id="SinclairModal" tabindex="-1" aria-labelledby="SinclairModal"
                 data-bs-backdrop="static" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="FaustModal">
-                                Faust
+                            <h1 class="modal-title fs-5" id="SinclairModal">
+                                Sinclair
                             </h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body" style="text-align: left;">
-                            The sinner who developed the engine of Mephistopheles, the bus operated by Limbus Company.
-                            She claims that there is no one in the City who could rival her library of knowledge and
-                            wisdom, and she isn't necessarily wrong. You might find her high and mighty attitude when
-                            she allows you to converse with her displeasing, but as seen with how she treats everyone
-                            with subtle gestures of arrogance, there is no hope of her parting with it, ever. We
-                            recommend simply nodding once and getting over it. Even though she has an unparalleled
-                            genius, we can't quite figure out how to use this one. Perhaps you could be the one to find
-                            out?
+                            You may be disheartened by the defective state of many of your Sinners, but do not worry;
+                            this Sinner is one of the few who can carry out most missions without much complaint. She is
+                            likely to make reasonable judgements, so it is a good idea to start conversations while
+                            looking her way if you're seeking sound advice. However, you mustn't forget: this Sinner has
+                            survived an absurd voyage in a far and wide body of water. Her patience may run deep, but
+                            once you take a wrong turn with her, it will be a difficult task to regain her trust.
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
